--- a/setup.cfg
+++ b/setup.cfg
@@ -21,11 +21,12 @@ packages = find_namespace:
 python_requires = >=3.7
 package_dir =
     = sources
-install_require =
+install_requires =
     pydantic~=1.8.2
     sqlalchemy~=1.4.23
     classic-components~=0.0.1
     classic-aspects~=0.0.1
+    classic-http-api~=0.0.1
     classic-app-layer~=0.0.1
     classic-sql-storage~=0.0.1
 
