Added messaging demo

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ python_requires = >=3.7
 package_dir =
     = sources
 install_requires =
+    attrs~=21.2.0
     pydantic~=1.8.2
     sqlalchemy~=1.4.23
     classic-components~=0.0.1
@@ -29,6 +30,8 @@ install_requires =
     classic-http-api~=0.0.2
     classic-app-layer~=0.0.1
     classic-sql-storage~=0.0.1
+    classic-messaging~=0.0.1
+    classic-messaging-kombu~=0.0.1
 
 
 [options.packages.find]
