--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ url = https://github.com/variasov/classic_demo_medium_difficulty
 project_urls =
     Bug Tracker = https://github.com/variasov/classic_demo_medium_difficulty/issues
 classifiers =
-    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Development Status :: 4 - Beta
@@ -22,16 +22,19 @@ python_requires = >=3.7
 package_dir =
     = sources
 install_requires =
-    attrs~=21.2.0
-    pydantic~=1.8.2
-    sqlalchemy~=1.4.23
-    classic-components~=0.0.1
-    classic-aspects~=0.0.1
-    classic-http-api~=0.0.2
-    classic-app-layer~=0.0.1
-    classic-sql-storage~=0.0.1
-    classic-messaging~=0.0.1
-    classic-messaging-kombu~=0.0.1
+    attrs~=21.4
+    pydantic~=1.9
+    sqlalchemy~=1.4
+    gunicorn~=20.1
+    classic-components~=0.1
+    classic-container~=0.1
+    classic-error-handling~=0.1
+    classic-validation~=0.1
+    classic-persistence~=0.1
+    classic-persistence-sqlalchemy~=0.1
+    classic-messaging~=0.1
+    classic-messaging-kombu~=0.1
+    classic-web~=0.1
 
 
 [options.packages.find]
@@ -39,7 +42,7 @@ where = sources
 
 [options.extras_require]
 dev =
-    pytest~=6.2.5
-    pytest-cov~=2.12.1
-    twine~=3.4.2
-    build~=0.7.0
+    pytest~=6.2
+    pytest-cov~=2.12
+    twine~=3.4
+    build~=0.7
