Вернул рабочий вариант с API

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ install_requires =
     classic-persistence-sqlalchemy~=0.1
     classic-messaging~=0.1
     classic-messaging-kombu~=0.1
-    classic-web~=0.1
+    classic-http-api~=1.0
 
 
 [options.packages.find]
